// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SvgIcon Icon Rendering renders arrow-left icon with correct attributes 1`] = `
<div>
  <svg
    class="svg-icon sm"
    data-icon="arrow-left"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M18.5.7c.9.9.9,2.4,0,3.4l-7.9,7.9,7.9,7.9c.9.9.9,2.4,0,3.4s-2.4.9-3.4,0L5.5,13.7c-.9-.9-.9-2.4,0-3.4L15.1.7c.9-.9,2.4-.9,3.4,0Z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`SvgIcon Icon Rendering renders chevron-down icon with correct attributes 1`] = `
<div>
  <svg
    class="svg-icon sm"
    data-icon="chevron-down"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M23,6.5l-11,11L1,6.5"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`SvgIcon Icon Rendering renders close icon with correct attributes 1`] = `
<div>
  <svg
    class="svg-icon sm"
    data-icon="close"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M.5,23.5L23.5.5M.5.5l23,23"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      xmlns="http://www.w3.org/2000/svg"
    />
  </svg>
</div>
`;

exports[`SvgIcon Icon Rendering renders menu-close icon with correct attributes 1`] = `
<div>
  <svg
    class="svg-icon sm"
    data-icon="menu-close"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.7,8.2c0.4-0.4,1.1-0.4,1.6,0l5.9,5.9l5.9-5.9c0.4-0.4,1.1-0.4,1.6,0c0.4,0.4,0.4,1.1,0,1.6l-5.9,5.9l5.9,5.9  c0.4,0.4,0.4,1.1,0,1.6s-1.1,0.4-1.6,0l-5.9-5.9l-5.9,5.9c-0.4,0.4-1.1,0.4-1.6,0c-0.4-0.4-0.4-1.1,0-1.6l5.9-5.9L8.7,9.8  C8.3,9.3,8.3,8.6,8.7,8.2z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`SvgIcon Props and Styling applies custom className and size 1`] = `
<div>
  <svg
    class="custom-class svg-icon lg"
    data-icon="arrow-left"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M18.5.7c.9.9.9,2.4,0,3.4l-7.9,7.9,7.9,7.9c.9.9.9,2.4,0,3.4s-2.4.9-3.4,0L5.5,13.7c-.9-.9-.9-2.4,0-3.4L15.1.7c.9-.9,2.4-.9,3.4,0Z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`SvgIcon Props and Styling applies custom fill and viewBox 1`] = `
<div>
  <svg
    class="svg-icon sm"
    data-icon="arrow-left"
    fill="none"
    viewBox="0 0 48 48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M18.5.7c.9.9.9,2.4,0,3.4l-7.9,7.9,7.9,7.9c.9.9.9,2.4,0,3.4s-2.4.9-3.4,0L5.5,13.7c-.9-.9-.9-2.4,0-3.4L15.1.7c.9-.9,2.4-.9,3.4,0Z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`SvgIcon Props and Styling handles title prop correctly 1`] = `
<div>
  <svg
    class="svg-icon sm"
    data-icon="arrow-left"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      Test Icon Title
    </title>
    <path
      clip-rule="evenodd"
      d="M18.5.7c.9.9.9,2.4,0,3.4l-7.9,7.9,7.9,7.9c.9.9.9,2.4,0,3.4s-2.4.9-3.4,0L5.5,13.7c-.9-.9-.9-2.4,0-3.4L15.1.7c.9-.9,2.4-.9,3.4,0Z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;
